Current Date - <TBA>
Release Number - v1.6.0

Description - Scheduled for mid to end of Febuary release. Last minor feature release before core cakePHP upgrade.

=======================================================================================
Module - Protocol
* CHANGE (Eventum #221) - Added field validation to protocol code. Now a required field.


=======================================================================================
Module - Administration
* CHANGE (Eventum #16) - Expanded banks table to included additional fields.


=======================================================================================
Module - Clinical Annotation
* Updated audit fields for treatment tables to DATETIME format.
* Added help text to Diagnosis fields.

=======================================================================================
Module - Inventory
* CHANGE (Eventum #476) - Correct bug to allow user to delete storage information of 
a used aliquot.


=======================================================================================
Module - Query Tool
* BUG (Eventum #472) - Corrected a bug where the unfilled values were not replaced with NULL
* BUG (Eventum #475) - Fixed a bug with the query tool where subqueries were not working.