@@ -28,3 +28,15 @@ a used aliquot.
 Module - Query Tool
 * BUG (Eventum #472) - Corrected a bug where the unfilled values were not replaced with NULL
 * BUG (Eventum #475) - Fixed a bug with the query tool where subqueries were not working.
+
+=======================================================================================
+Module - ALL
+* Change some db fields sizes
+*    `collections`.`reception_by`
+*    `collections`.`collection_property`
+*    `derivative_details`.`creation_by`
+*    `diagnoses`.`dx_number`
+*    `orders`.`order_number`
+*    `participant_messages`.`due_date`
+*    `protocol_masters`.`name`
+*    `storage_masters`.`short_label`
